--- a/src/client/scss/style.scss
+++ b/src/client/scss/style.scss
@@ -8,6 +8,7 @@
 @import "./components/shared.scss";
 @import "./components/forms.scss";
 @import "./components/social-login.scss";
+@import "./components//video_player.scss";
 
 // screens
 @import "./screens/search.scss";
