--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -6,16 +6,18 @@ block content
         div#videoControls 
             button#play 
                 i.fas.fa-play
-            button#mute Mute 
-            input(type="range", step="0.1", min="0", max="1")#volume
             div
                 span#currenTime 00:00
                 span  / 
                 span#totalTime 00:00
-            div 
+            div#timelineBar 
                 input(type="range", step="1", value=0.5, min="0")#timeline
+            button#mute 
+                i.fas.fa-volume-up
+            input(type="range", step="0.1", min="0", max="1")#volume
             div 
-                button#fullScreen Enter Full Screen
+                button#fullScreen 
+                    i.fas.fa-expand 
         
 
 block scripts 
