--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,6 +1,9 @@
 extends base
 
 block content 
+    div 
+        video#preview
+        button#startBtn start recording
     if errorMessage 
         span=errorMessage
     form(method="POST", enctype="multipart/form-data")
@@ -10,3 +13,6 @@ block content
         input(type="text", placeholder="description", required, name="description", minlength= 20)
         input(type="text", placeholder="hashtags, separated by comma", required, name="hashtags")
         input(type="submit", value="Upload Video")
+
+block scripts
+    script(src="/static/js/recorder.js")
