--- a/src/client/scss/style.scss
+++ b/src/client/scss/style.scss
@@ -14,6 +14,8 @@
 @import "./screens/search.scss";
 @import "./screens/profile.scss";
 @import "./screens/edit-profile.scss";
+@import "./screens/upload.scss";
+@import "./screens/watch.scss";
 
 // default
 a {
@@ -30,4 +32,46 @@ main {
     max-width: 1200px;
     width: 100%;
     margin: 50px auto 0;
+}
+
+.messages {
+    position: absolute;
+    top: 10px;
+    left: 0;
+    right: 0;
+    max-width: 200px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 10px 20px;
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+    animation: goAway 0.5s ease-in-out 0.5s forwards;
+    -webkit-animation: goAway 0.5s ease-in-out 0.5s forwards;
+    &.error {
+        background-color: tomato;
+        color: #fff;
+    }
+}
+
+@keyframes goAway {
+    from {
+        opacity: 1;
+        transform: none;
+        -webkit-transform: none;
+        -moz-transform: none;
+        -ms-transform: none;
+        -o-transform: none;
+    }
+
+    to {
+        opacity: 0;
+        transform: translateY(-50px);
+        -webkit-transform: translateY(-50px);
+        -moz-transform: translateY(-50px);
+        -ms-transform: translateY(-50px);
+        -o-transform: translateY(-50px);
+}
 }
