--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,18 +1,21 @@
 extends base
 
 block content 
-    div 
-        video#preview
-        button#startBtn start recording
-    if errorMessage 
-        span=errorMessage
-    form(method="POST", enctype="multipart/form-data")
-        label(for="video") video file
-        input(type="file", name="video", id="video", required, accept="video/*")
-        input(type="text", placeholder="title", required, name="title", maxlength= 80)
-        input(type="text", placeholder="description", required, name="description", minlength= 20)
-        input(type="text", placeholder="hashtags, separated by comma", required, name="hashtags")
-        input(type="submit", value="Upload Video")
+    div.upload__container 
+        div.upload__video
+            video#preview
+            button#actionBtn.social__btn start recording
+        if errorMessage 
+            span=errorMessage
+        form(method="POST", enctype="multipart/form-data")
+            label(for="video") video file
+            input(type="file", name="video", id="video", required, accept="video/*")
+            lable(for="thumb") Thumbnail 
+            input(type="file", name="thumb", id="thumb", required, accept="image/*")
+            input(type="text", placeholder="title", required, name="title", maxlength= 80)
+            input(type="text", placeholder="description", required, name="description", minlength= 20)
+            input(type="text", placeholder="hashtags, separated by comma", required, name="hashtags")
+            input(type="submit", value="Upload Video")
 
 block scripts
     script(src="/static/js/recorder.js")
