--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -18,7 +18,22 @@ block content
             div 
                 button#fullScreen 
                     i.fas.fa-expand 
+
+    if loggedIn
+        div.video__comments 
+            form.video__comment-form#commentForm
+                textarea(cols="30", lows="10", placeholder="write a nice comment")
+                button Add comment
+    div.video__comments 
+        ul 
+            each comment in video.comments.reverse()
+                li.video__comment(data-id=comment._id)
+                    i.fas.fa-comment
+                    span #{comment.text}
+                    if String(comment.owner._id) === String(loggedInUser._id)
+                        span.deleteBtn ❌
         
 
 block scripts 
     script(src="/static/js/videoPlayer.js")
+    script(src="/static/js/commentSection.js")
