--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -20,10 +20,9 @@ header
                             span 😀😀
                         else 
                             if loggedInUser.avatarUrl
-                                if loggedInUser.avatarUrl.includes("github")
+                                //- if loggedInUser.avatarUrl.includes("github")
                                     img.header__avatar(src=loggedInUser.avatarUrl, crossorigin)
-                                else
-                                    img.header__avatar(src=loggedInUser.avatarUrl, crossorigin)
+                                img.header__avatar(src=loggedInUser.avatarUrl, crossorigin)
 
             else 
                 li 
